# for_opt_sales

./: .dockerignore  .gitignore  Dockerfile  FSM.py  README.md  assistent.py  docker-compose.yml  finder.py  functions.py  google_sheets.py  handlers.py  keyboards.py  main.py  pyproject.toml  redis_file.py  structure.py
.github/workflows/: ci.yml
ignores/: .gitignore
prompts/: organization.md  product_catalog.md
tests/: test_google_sheets.py  test_redis_file.py  test_yandex_services.py
